# camera_aravis2

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: CONTRIBUTING
.github/workflows/: build_and_test.yml  build_and_test_humble.yml  build_and_test_iron.yml  build_and_test_jazzy.yml  industrial_ci_action.yml  install_additional_dependencies.sh
camera_aravis/: CMakeLists.txt  package.xml
camera_aravis/CMakeModules/: FindAravis.cmake  FindGLIB2.cmake
camera_aravis/config/: camera_info_example.yaml
camera_aravis/include/camera_aravis/: camera_aravis.h  camera_aravis.hpp  camera_buffer_pool.h  common.h  concurrent_queue.hpp  conversion_utils.h  error.h  error.hpp  genicam_xml_exporter.h  utils.hpp
camera_aravis/launch/: camera_aravis.launch.xml  camera_aravis_example.launch.py  genicam_xml_exporter_example.launch.py
camera_aravis/src/: camera_aravis.cpp  camera_aravis_main.cpp  camera_buffer_pool.cpp  conversion_utils.cpp  error.cpp  genicam_xml_exporter.cpp  genicam_xml_exporter_main.cpp  main.cpp  utils.cpp
camera_aravis2/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_aravis2/CMakeModules/: FindARAVIS.cmake  FindGLIB2.cmake
camera_aravis2/config/: camera_diagnostics_example.yaml  camera_info_example.yaml  camera_info_example_uv.yaml  diag.yaml  dynamic_parameters_example.yaml  front.yaml
camera_aravis2/include/camera_aravis2/: camera_aravis_node_base.h  camera_driver.h  camera_driver_gv.h  camera_driver_uv.h  camera_xml_exporter.h  common.h  concurrent_queue.hpp  config_structs.h  conversion_utils.h  error.h  image_buffer_pool.h
camera_aravis2/launch/: camera_driver_gv_example.launch.py  camera_driver_uv_example.launch.py  camera_xml_exporter_example.launch.py
camera_aravis2/src/: camera_aravis_node_base.cpp  camera_driver.cpp  camera_driver_gv.cpp  camera_driver_gv_main.cpp  camera_driver_uv.cpp  camera_driver_uv_main.cpp  camera_finder_main.cpp  camera_xml_exporter.cpp  camera_xml_exporter_main.cpp  conversion_utils.cpp  error.cpp  image_buffer_pool.cpp
camera_aravis2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
camera_aravis2_msgs/srv/: CalculateWhiteBalance.srv
camera_aravis_msgs/: CMakeLists.txt  README.md  package.xml
camera_aravis_msgs/msg/: CameraAutoInfo.msg
