<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_aravis</name>
  <version>2.0.0</version>
  <description>A complete and comfortable GenICam (USB3Vision and GigEVision) based camera driver for ROS2 (Ethernet and USB).</description>
  <maintainer email="dominik.kleiser@iosb.fraunhofer.de">Dominik Kleiser</maintainer>
  <license>LGPL-2.1-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>camera_aravis_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
