<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_aravis2</name>
  <version>0.1.0</version>
  <description>A complete and comfortable GenICam (GigEVision and USB3Vision) based camera driver for ROS2 (Ethernet and USB).</description>
  <maintainer email="boitumelo.ruf@iosb.fraunhofer.de">Boitumelo Ruf</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>camera_aravis2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
